# pyongyang-naengmyeon-mania-mcp

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
prompts/: 01_restaurant_data_collection.md  02_terminology_and_guide_collection.md  03_deep_research_execution.md
src/pyongyang_naengmyeon/: __init__.py  mcp_server.py  server.py  sse_server.py
src/pyongyang_naengmyeon/data/: eating_guides.json  lineages.json  restaurants.json  side_menus.json
src/pyongyang_naengmyeon/models/: __init__.py  enums.py  schemas.py
src/pyongyang_naengmyeon/tools/: __init__.py  definitions.py
